<resources>
    <string name="app_name">MyPer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Yanis CHIKIROU</string>
    <string name="nav_header_subtitle">Date de naissance : 24/01/1990</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Paramètres</string>

    <string name="menu_home"><font fgcolor='#173659'>Accueil</font></string>
    <string name="menu_points"><font fgcolor='#173659'>Mes points</font></string>
    <string name="menu_gallery"><font fgcolor='#173659'>FAQs</font></string>
    <string name="menu_stage"><font fgcolor='#173659'>Trouver session de stage</font></string>
    <string name="menu_contact_pref"><font fgcolor='#173659'>Contacter ma préfécture</font></string>
    <string name="menu_slideshow"><font fgcolor='#173659'>Notifications</font></string>


    <string name="home_second">Home Second</string>
    <string name="ameli_icon">Ameli</string>
    <string name="connexion">Connexion</string>
    <string name="solde_de_vos_points">Solde de vos points</string>
    <string name="bonjour">Bonjour</string>
    <string name="date_de_naissance">Date de naissance :</string>
    <string name="votre_dossier_de_permis_est_d_t_cet_instant">Votre dossier de permis est dôté, à cet instant :</string>
    <string name="avertissements_importants">AVERTISSEMENTS IMPORTANTS :</string>
    <string name="_12">12</string>
    <string name="points">points</string>
</resources>
